--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -19,3 +19,4 @@ jobs:
           script: |
             cd /var/www/procon34_CYBER_WARS_frontend/
             git pull origin main
+            npm install
