--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,5 @@ jobs:
           script: |
             cd /var/www/procon34_CYBER_WARS_frontend/
             git pull origin main
+            source ~/.bashrc
             npm install
