--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: main
         uses: appleboy/ssh-action@master
+        uses: volta-cli/action@4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.USERNAME }}
@@ -16,8 +17,8 @@ jobs:
           proxy_host: ${{ secrets.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
           proxy_password: ${{ secrets.PROXY_PASSWORD }}
-          script: |
-            cd /var/www/procon34_CYBER_WARS_frontend/
-            git pull origin main
-            source ~/.zshrc
-            npm install
+          node-version: 16.x
+          npm-version: 8.19.4
+          run: cd /var/www/procon34_CYBER_WARS_frontend/
+          run: git pull origin main
+          run: npm install
