--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: main
-        uses: appleboy/ssh-action@master
-        uses: volta-cli/action@4
+      - uses: appleboy/ssh-action@master
+      - uses: volta-cli/action@4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.USERNAME }}
@@ -19,6 +19,6 @@ jobs:
           proxy_password: ${{ secrets.PROXY_PASSWORD }}
           node-version: 16.x
           npm-version: 8.19.4
-        run: cd /var/www/procon34_CYBER_WARS_frontend/
-        run: git pull origin main
-        run: npm install
+      - run: cd /var/www/procon34_CYBER_WARS_frontend/
+      - run: git pull origin main
+      - run: npm install
