--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
           proxy_password: ${{ secrets.PROXY_PASSWORD }}
           node-version: 16.x
           npm-version: 8.19.4
-      - run: cd /var/www/procon34_CYBER_WARS_frontend/
-      - run: git pull origin main
-      - run: npm install
+      - name: Move to production environment directory
+        run: cd /var/www/procon34_CYBER_WARS_frontend/
+      - name: Pull from remote branch
+        run: git pull origin main
+      - name: install module
+        run: npm install
