--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,10 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - name: main
-      - uses: appleboy/ssh-action@master
-      - uses: volta-cli/action@4
+      - name: Setup SSH connection
+        uses: appleboy/ssh-action@master
+      - name: Setup Volta
+        uses: volta-cli/action@4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.USERNAME }}
