--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Setup SSH connection
         uses: appleboy/ssh-action@master
-      - name: Setup Volta
-        uses: volta-cli/action@4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.USERNAME }}
@@ -26,5 +24,8 @@ jobs:
         run: cd /var/www/procon34_CYBER_WARS_frontend/
       - name: Pull from remote branch
         run: git pull origin main
-      - name: install module
-        run: npm install
+      - name: Use Node.js 14
+        uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      - run: npm install
