main.ymlのエラーを解消

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,11 @@ jobs:
           proxy_password: ${{ secrets.PROXY_PASSWORD }}
           node-version: 16.x
           npm-version: 8.19.4
-      - name: Move to production environment directory
-        run: cd /var/www/procon34_CYBER_WARS_frontend/
-      - name: Pull from remote branch
-        run: git pull origin main
-      - name: Use Node.js 14
+          script: |
+            cd /var/www/procon34_CYBER_WARS_frontend/
+            git pull origin main
+      - name: Use Node.js 16
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "16"
       - run: npm install
