--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "recoil": "^0.7.7",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.4.9",
