--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.14.2",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.7",
