--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@hookform/resolvers": "^3.2.0",
     "@uiw/react-codemirror": "^4.21.9",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "framer-motion": "^10.15.1",
     "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.14.2",
     "recoil": "^0.7.7",
