--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "json-server --watch db.json --port 3001"
+    "start": "nodemon server.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "@mswjs/data": "^0.13.0",
     "@uiw/react-codemirror": "^4.21.9",
     "axios": "^1.4.0",
-    "cors": "^2.8.5",
     "framer-motion": "^10.15.1",
+    "msw": "^1.2.5",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,7 +38,6 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "json-server": "^0.17.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
