--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "procon34-cyber-wars-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
-    "@mswjs/data": "^0.13.0",
+    "@types/jest": "^29.5.4",
+    "@types/jsonwebtoken": "^9.0.2",
     "@uiw/react-codemirror": "^4.21.9",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.1",
+    "jest": "^29.6.4",
+    "jsonwebtoken": "^9.0.1",
     "msw": "^1.2.5",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
@@ -25,10 +28,14 @@
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.14.2",
     "recoil": "^0.7.7",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
+    "ts-jest": "^29.1.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@mswjs/data": "^0.13.0",
     "@types/node": "^20.4.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -40,5 +47,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
