--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "@uiw/react-codemirror": "^4.21.9",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.1",
-    "jest": "^29.6.4",
     "jsonwebtoken": "^9.0.1",
-    "msw": "^1.2.5",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "react": "^18.2.0",
@@ -36,6 +34,7 @@
   },
   "devDependencies": {
     "@mswjs/data": "^0.13.0",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.4.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -45,10 +44,11 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.6.4",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   },
   "msw": {
-    "workerDirectory": "public"
+    "workerDirectory": "..\\..\\..\\public"
   }
 }
