--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "nodemon server.ts"
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
@@ -34,7 +35,9 @@
   },
   "devDependencies": {
     "@mswjs/data": "^0.13.0",
+    "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^20.4.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
