--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@uiw/react-codemirror": "^4.21.9",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.1",
     "jsonwebtoken": "^9.0.1",
-    "nodemon": "^3.0.1",
     "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,8 +28,6 @@
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.14.2",
     "recoil": "^0.7.7",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
     "ts-jest": "^29.1.1",
     "zod": "^3.21.4"
@@ -48,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   },
