--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@codemirror/lang-php": "^6.0.1",
     "@hookform/resolvers": "^3.2.0",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
+    "@uiw/codemirror-extensions-color": "^4.21.13",
+    "@uiw/codemirror-theme-vscode": "^4.21.13",
     "@uiw/react-codemirror": "^4.21.9",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.1",
