--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "@codemirror/lang-php": "^6.0.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.2.0",
     "@mswjs/data": "^0.13.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.9",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
     "@types/jest": "^29.5.4",
