--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query-devtools": "^4.33.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
+    "@uiw/codemirror-extensions-basic-setup": "^4.21.18",
     "@uiw/codemirror-extensions-color": "^4.21.13",
     "@uiw/codemirror-theme-vscode": "^4.21.13",
     "@uiw/react-codemirror": "^4.21.9",
