--- a/.github/workflows/main-cd.yml
+++ b/.github/workflows/main-cd.yml
@@ -1,15 +1,16 @@
-name: main
+name: main CD
 on:
   push:
     branches:
       - main
 jobs:
-  build:
-    runs-on: ubuntu-22.04
+  main-cd:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Setup SSH connection
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: CD
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -20,9 +21,13 @@ jobs:
           proxy_password: ${{ secrets.PROXY_PASSWORD }}
           script: |
             cd /var/www/procon34-cyber-wars-frontend/
-            git pull origin main
-      - name: Use Node.js 16
-        uses: actions/setup-node@v2
+            git fetch origin ${{ inputs.branch-name }}
+            git reset --hard origin/${{ inputs.branch-name }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: "16"
+
+      - name: Install
       - run: npm install
