--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.7",
     "@types/jest": "^29.5.5",
-    "@types/jsonwebtoken": "^9.0.3",
     "@uiw/codemirror-extensions-color": "^4.21.19",
     "@uiw/codemirror-theme-vscode": "^4.21.19",
     "@uiw/react-codemirror": "^4.21.19",
     "axios": "^1.4.0",
     "framer-motion": "^10.16.4",
-    "jsonwebtoken": "^9.0.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +35,7 @@
     "react-router-dom": "^6.16.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.8",
+    "swiper": "^10.3.1",
     "ts-jest": "^29.1.1",
     "zod": "^3.22.4"
   },
