--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.16.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.8",
