--- a/.github/workflows/main-cd.yml
+++ b/.github/workflows/main-cd.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@main
 
       - name: CD
         uses: appleboy/ssh-action@master
@@ -25,7 +25,8 @@ jobs:
             git reset --hard origin/main
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@main
         with:
           node-version: "16"
-      - run: npm install
+
+      - run: npm install --save --legacy-peer-deps
