--- a/.github/workflows/main-cd.yml
+++ b/.github/workflows/main-cd.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@main
         with:
-          node-version: "16"
+          node-version: "18"
 
-      - name: Package Install
+      - name: Package install
         run: npm install --save --legacy-peer-deps
 
       - name: Build
