--- a/.github/workflows/main-cd.yml
+++ b/.github/workflows/main-cd.yml
@@ -25,7 +25,7 @@ jobs:
             git reset --hard origin/main
 
       - name: Setup Node.js
-        uses: actions/setup-node@main
+        uses: actions/setup-node@v3
         with:
           node-version: "18"
 
