--- a/.github/workflows/main-cd.yml
+++ b/.github/workflows/main-cd.yml
@@ -30,7 +30,9 @@ jobs:
           node-version: "18"
 
       - name: Package Install
-        run: npm install --save --legacy-peer-deps
+        run: |
+          npm install --save --legacy-peer-deps
+          npm audit fix
 
       - name: Build
         run: npm run build
